@@ -1,3 +1,8 @@
+Thu Nov 28 16:15:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_dup2): extract from rb_cloexec_dup2() and
+	  redirect_dup2().
+
 Tue Nov 28 14:40:00 2013  Akira Matsuda  <ronnie@dio.jp>
 
 	* lib/drb/ssl.rb:  [Doc] Fix typo
